List all repos and way to get hashes for them

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ Package.resolved
 
 ## User settings
 xcuserdata/
+swift-builder.xcscheme
 
 ## compatibility with Xcode 8 and earlier (ignoring not required starting Xcode 9)
 *.xcscmblueprint
